DoubleLinkedStack Generic Programming in C

--- a/DoubleLinkedStack/DoubleLinkedStack.vcxproj
+++ b/DoubleLinkedStack/DoubleLinkedStack.vcxproj
@@ -146,6 +146,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DoubleLinkedStack.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DoubleLinkedStack.c" />
+    <ClCompile Include="test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
